syntax = "proto3";

option go_package = "helloservice/pb";

service HelloService {
    rpc SayHello(HelloRequest) returns (HelloReply) {}
  }

message HelloRequest {
    string Name =1;
}

message HelloReply {
    string Name =1;
}